year and multi part command